--- a/css/style.css
+++ b/css/style.css
@@ -98,14 +98,14 @@ section {
 }
 
 .slide1 {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg_banner2.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/fond_dago.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
 .slide2 {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg_banner1.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/Vision1.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -349,7 +349,7 @@ text-align: center;}
 
 #reviews {
 
-    background: linear-gradient(-90deg, rgba(8, 32, 50, 0.8), rgba(8, 32, 50, 0.8)), url(../img/bg_banner1.jpg), #082032;;
+    background: linear-gradient(-90deg, rgba(8, 32, 50, 0.8), rgba(8, 32, 50, 0.8)), url(../img/maxresdefault.jpg), #082032;;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -375,9 +375,14 @@ text-align: center;}
 }
 
 .review img {
-    width: 80px !important;
-    height: 80px;
+    width: 120px !important;
     border-radius: 100px;
+    margin: auto;
+}
+
+.review .coucou img {
+    width: 150px !important;
+    border-radius: 10px;
     margin: auto;
 }
 
@@ -437,7 +442,7 @@ text-align: center;}
 }
 
 footer {
-    background: linear-gradient(0deg, rgba(8, 32, 50, 0.9), rgba(8, 32, 50, 0.9)), url(../img/bg_banner1.jpg), #082032;;
+    background: linear-gradient(0deg, rgba(8, 32, 50, 0.9), rgba(8, 32, 50, 0.9)), url(../img/Fond.jpg), #082032;;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
